ansible/playbooks/roles/webapplication/files/miweb-server.yaml
# Despliegue de la aplicación, es un servidor nginx
# mapeamos la carpeta del servidor nginx /website_files contra la carpeta /srv/nfs del nodo (volumen compartido)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miweb-server
  namespace: miweb-server
  labels:
    app: miweb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miweb-server
  template:
    metadata:
      labels:
        app: miweb-server
    spec:
      containers:
      - name: miweb-server
        image: kitematic/hello-world-nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
        volumeMounts:
        - name: storage-miweb-server
          mountPath: /website_files
      volumes:
      - name: storage-miweb-server
        hostPath:
          path: /srv/nfs
