ansible/playbooks/roles/webapplication/files/service.yaml
# creamos el servicio 
apiVersion: v1
kind: Service
metadata:
    name: miweb-service
    namespace: miweb-server
spec:
    selector:
      app: miweb-server
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
