ansible/playbooks/roles/webapplication/files/service.yml
---
# creamos el servicio 
apiVersion: v1
kind: Service
metadata:
    name: webapp-service
    namespace: webapp-routed
spec:
    selector:
      app: webapp-routed
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
