ansible/playbooks/roles/webapplication/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miweb-ingress
  namespace: miweb-apache
  labels:
    app: miweb-apache
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - http:
      paths:
      - path: /miweb
        pathType: "Prefix"
        backend:
          service:
            name: miweb-service
            port:
              number: 80
